# 1get_next_line

./: .gitignore  CMakeLists.txt  Makefile  main.c
get_next_line/: get_next_line.c  get_next_line.h
gnl/: get_next_line.c  get_next_line.h  get_next_line_bonus.h  get_next_line_utils.c
gnl_tst/: CMakeLists.txt  Makefile  main.c
testfiles/: t312.txt
